--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,15 +42,20 @@ http {
 
         root /server;
 
-        location / {
-            index index.html;
-        }
-
-        location /minishell {
-            proxy_pass http://88.88.5.2:8006/;
+        location /minishell/vnc {
+            proxy_pass http://minishell:8006/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+        location / {
+            proxy_pass http://website:3000/;
+            proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
