--- a/server_website/nginx/Dockerfile
+++ b/server_website/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx
 
 WORKDIR /server
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+# COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY ./html /server/html
 COPY ./index.html /server
 
