--- a/server_website/nginx/nginx.conf
+++ b/server_website/nginx/nginx.conf
@@ -15,67 +15,55 @@ events {
 
 
 http {
-    limit_req_zone $binary_remote_addr zone=one:10m rate=30r/m;
-	server {
-		listen	80;
-		listen [::]:80;
+    include       mime.types;
+    default_type  application/octet-stream;
 
-		charset utf-8;
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-		server_name victorvobis www.victorvobis.mooo.com;
-		server_tokens off;
+    #access_log  logs/access.log  main;
 
-		location /.well-known/acme-challenge/ {
-            limit_req zone=one burst=10 nodelay;
-			root /var/www/certbot;
-		}
-		return 301 https://$host$request_uri;
+    sendfile        on;
+    #tcp_nopush     on;
 
-	}
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
 
-	server {
-		listen	80;
-		listen [::]:80;
+    #gzip  on;
 
-		charset utf-8;
+    server {
+        listen       80;
+        server_name  localhost;
 
-		server_name remoteserver www.remoteserver.vps.webdock.cloud;
-		server_tokens off;
+        #charset koi8-r;
 
-		location /.well-known/acme-challenge/ {
-            limit_req zone=one burst=10 nodelay;
-			root /var/www/certbot;
-		}
-		return 301 https://$host$request_uri;
+        #access_log  logs/host.access.log  main;
 
-	}
-	server {
+        root /server;
 
-		listen 443 ssl;
+        location /minishell/vnc {
+            proxy_pass http://minishell:8006/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+        location / {
+            proxy_pass http://website:3000/;
+            proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
 
-		ssl_certificate /etc/letsencrypt/live/remoteserver.vps.webdock.cloud/fullchain.pem;
-		ssl_certificate_key /etc/letsencrypt/live/remoteserver.vps.webdock.cloud/privkey.pem;
-
-		location /minishell/vnc {
-		    proxy_pass http://88.88.5.2:8006/;
-		    proxy_http_version 1.1;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "upgrade";
-		    proxy_set_header Host $host;
-		    proxy_set_header X-Real-IP $remote_addr;
-		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		}
-
-		location / {
-		    proxy_pass http://88.88.5.3:3000/;
-		    proxy_http_version 1.1;
-		    # proxy_set_header Upgrade $http_upgrade;
-		    # proxy_set_header Connection "upgrade";
-		    proxy_set_header Host $host;
-		    proxy_set_header X-Real-IP $remote_addr;
-		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		}
-	}
+        location ~ /.well-known/acme-challenge {
+            root /var/www/certbot;
+        }
 
         #error_page  404              /404.html;
 
@@ -102,8 +90,8 @@ http {
         #location ~ /\.ht {
         #    deny  all;
         #}
+    }
 
-        #access_log  logs/host.access.log  main;
 
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
