--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,8 +69,8 @@ http {
 		location / {
 		    proxy_pass http://88.88.5.3:3000/;
 		    proxy_http_version 1.1;
-		    # proxy_set_header Upgrade $http_upgrade;
-		    # proxy_set_header Connection "upgrade";
+		    proxy_set_header Upgrade $http_upgrade;
+		    proxy_set_header Connection "upgrade";
 		    proxy_set_header Host $host;
 		    proxy_set_header X-Real-IP $remote_addr;
 		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
